--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
                 <a href="#" id="mobileMenuIcon"><img alt="mobile menu icon" title="mobile menu icon" src="images/hamburger.png" /></a>
                 <ul id="menu">
                     <li><a href="#home">Home</a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#home">Secondary Menu</a></li>
                             <li><a href="#portfolio">Navigation</a></li>
                             <li><a href="#articles">More Options</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#home">Sub Menu</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#articles">Another</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li><a href="#articles">Articles</a></li>
                     <li><a href="#keypoints">Key Points</a></li>
                 </ul>
-                <figure class="scrollArrow">
+                <!-- <figure class="scrollArrow">
                     <img alt="see more items" title="see more items" src="images/nav/nav-more.png">
-                </figure>
+                </figure> -->
             </nav>
             <nav id="mainSocialIcons">
                 <ul id="socialIcons">
@@ -121,10 +121,10 @@
                             </header>
                             <div class="pageHeader">
                                 <figure class="pad3D">
-                                    <img alt="fluid theme on ipad" title="fluid theme on ipad" src="images/home/pad_3d_icon.png">
+                                    <img alt="architect mindframe logo" title="architect mindframe logo" src="images/logo/am-logo.png">
                                 </figure>
                                 <section class="pageBlurb">
-                                    <h2>Blurb Title</h2>
+                                    <h2>Welcome to Architect Mindframe Inc.</h2>
                                     <h3> Defining the blurb title</h3>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum.</p>
                                 </section>
@@ -255,15 +255,15 @@
                                 <h2>A Collection of Our Best Work</h2>
                                 <h3> We provide media services of all types</h3>
                             </section>
-                            <nav class="portfolioNav">
-                                        <ul>
-                                            <li><a href="#">All</a></li>
-                                            <li><a href="#">Web</a></li>
-                                            <li><a href="#">Ecom</a></li>
-                                            <li><a href="#">Film</a></li>
-                                            <li><a href="#">Audio</a></li>
-                                        </ul>
-                                    </nav>
+                            <!-- <nav class="portfolioNav">
+                                <ul>
+                                    <li><a href="#">All</a></li>
+                                    <li><a href="#">Web</a></li>
+                                    <li><a href="#">Ecom</a></li>
+                                    <li><a href="#">Film</a></li>
+                                    <li><a href="#">Audio</a></li>
+                                </ul>
+                            </nav> -->
                             <div class="clear"></div>
                         </div>
                        
@@ -271,19 +271,19 @@
                             <div class="pagePortfolioContainer">
                                 <div class="pagePortfolio"> 
                                             <figure class="listFileOne">
-                                                <img alt="monster" title="monster" src="images/portfolio/pic1.jpg"> 
+                                                <img alt="monster" title="monster" src="images/am-screenshots/aia-site.jpg"> 
                                                 <figure class="portfolioHover">
                                                     <p>Illustration project; developing a Monster Character!
                                                         <span><a href="#">In Web</a></span>
                                                         <a href="#light"><img alt="monster read more" title="monster read more" src="images/portfolio/view-more-button.png"><span>View More</span></a>
                                                         <a href="#_" class="lightbox" id="light">
-                                                            <img alt="monster" title="monster" src="images/portfolio/pic1.jpg">
+                                                            <img alt="monster" title="monster" src="images/am-screenshots/aia-site.jpg">
                                                         </a>
                                                     </p>
                                                 </figure>
                                             </figure>
                                             <figure class="listFileTwo">
-                                                <img alt="bakery" title="bakery" src="images/portfolio/pic2.jpg">
+                                                <img alt="bakery" title="bakery" src="images/am-screenshots/brazilianhour-site2.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>Start your own Bakery!
                                                         <span><a href="#">In Ecom</a></span>
@@ -291,13 +291,13 @@
                                                             <img alt="bakery read more" title="bakery read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light2">
-                                                            <img alt="bakery" title="bakery" src="images/portfolio/pic2.jpg">
+                                                            <img alt="bakery" title="bakery" src="images/am-screenshots/brazilianhour-site2.jpg">
                                                         </a>
                                                     </p>
                                                  </figure>
                                             </figure>
                                             <figure class="listFileThree">
-                                                <img alt="big screen" title="big screen" src="images/portfolio/pic4.jpg">
+                                                <img alt="big screen" title="big screen" src="images/am-screenshots/donwelch-site.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>A New Sensation on the Big Screen!
                                                         <span><a href="#">In Film</a></span>
@@ -305,13 +305,13 @@
                                                             <img alt="big screen read more" title="big screen read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light3">
-                                                            <img alt="big screen" title="big screen" src="images/portfolio/pic4.jpg">
+                                                            <img alt="big screen" title="big screen" src="images/am-screenshots/donwelch-site.jpg">
                                                         </a>
                                                     </p>
                                                 </figure> 
                                             </figure>
                                             <figure class="listFileFour">
-                                                <img alt="outer space" title="outer space" src="images/portfolio/pic3.jpg">
+                                                <img alt="outer space" title="outer space" src="images/am-screenshots/flex.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>Tales from Outer Space!
                                                         <span><a href="#">In Audio</a></span>
@@ -319,13 +319,13 @@
                                                             <img alt="outer space read more" title="outer space read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light4">
-                                                            <img alt="outer space" title="outer space" src="images/portfolio/pic3.jpg">
+                                                            <img alt="outer space" title="outer space" src="images/am-screenshots/flex.jpg">
                                                         </a>
                                                     </p>
                                                 </figure> 
                                             </figure>
                                             <figure class="listFileFive">
-                                                <img alt="new products" title="new productsnew products" src="images/portfolio/pic5.jpg">
+                                                <img alt="new products" title="new productsnew products" src="images/am-screenshots/jayblaze-site.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>Brand New Products Coming Soon!
                                                         <span><a href="#">In Web</a></span>
@@ -333,13 +333,13 @@
                                                             <img alt="new products read more" title="new products read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light5">
-                                                            <img alt="new products" title="new products" src="images/portfolio/pic5.jpg">
+                                                            <img alt="new products" title="new products" src="images/am-screenshots/jayblaze-site.jpg">
                                                         </a>
                                                     </p>
                                                 </figure> 
                                             </figure>
                                             <figure class="listFileSeven">
-                                                <img alt="colors" title="colors" src="images/portfolio/pic7.jpg">
+                                                <img alt="colors" title="colors" src="images/am-screenshots/jayblaze-tumblr.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>Colors, Colors, and More Colors!
                                                         <span><a href="#">In Film</a></span>
@@ -347,13 +347,13 @@
                                                             <img alt="colors read more" title="colors read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light7">
-                                                            <img alt="colors" title="colors" src="images/portfolio/pic7.jpg">
+                                                            <img alt="colors" title="colors" src="images/am-screenshots/jayblaze-tumblr.jpg">
                                                         </a>
                                                     </p>
                                                 </figure> 
                                             </figure>
                                            <figure class="listFileSix">
-                                                <img alt="never seen" title="never seen" src="images/portfolio/pic6.jpg">
+                                                <img alt="never seen" title="never seen" src="images/am-screenshots/donwelch-site3.jpg">
                                                 <figure class="portfolioHover">
                                                     <p>Events Never Seen Before!
                                                         <span><a href="#">In Audio</a></span>
@@ -361,7 +361,7 @@
                                                             <img alt="never seen read more" title="never seen read more" src="images/portfolio/view-more-button.png"><span>View More</span>
                                                         </a>
                                                         <a href="#_" class="lightbox" id="light6">
-                                                            <img alt="never seen" title="never seen" src="images/portfolio/pic6.jpg">
+                                                            <img alt="never seen" title="never seen" src="images/am-screenshots/donwelch-site3.jpg">
                                                         </a>
                                                     </p>
                                                 </figure>
@@ -647,8 +647,8 @@
         <!--  Start #footer -->
         <footer id="footer">
             <section id="copyright">
-                <h1><img alt="footer logo" title="footer logo" src="images/logo/logo_white.png">
-                    <span>Fluid</span>
+                <h1><img alt="footer logo" title="footer logo" src="images/logo/am-logo.png">
+                    <!-- <span>Architect Mindframe</span> -->
                     <span class="date">&#169; 2014</span>
                 </h1>
                 <figure id="footerDesignOne"></figure>
