Added welcome summary

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <nav id="menuWrap">
                 <a href="#" id="mobileMenuIcon"><img alt="mobile menu icon" title="mobile menu icon" src="images/hamburger.png" /></a>
                 <ul id="menu">
-                    <li><a href="#home">Home</a>
+                    <li><a href="#welcome">Welcome</a>
                         <!-- <ul>
                             <li><a href="#home">Secondary Menu</a></li>
                             <li><a href="#portfolio">Navigation</a></li>
@@ -62,7 +62,7 @@
                             <li><a href="#articles">Another</a></li>
                         </ul> -->
                     </li>
-                    <li><a href="#articles">Articles</a></li>
+                    <!-- <li><a href="#articles">Articles</a></li> -->
                     <li><a href="#keypoints">Key Points</a></li>
                 </ul>
                 <!-- <figure class="scrollArrow">
@@ -106,16 +106,16 @@
                 <a href="#" class="prevPage"><img alt="slide left" title="slide left" src="images/menu/page-nav-left.png"></a>
                 <div class="pagesContainer">                        
                     <!-- Home -->
-                    <div class="page home current"> 
+                    <div class="page welcome current"> 
                     <section id="homeBackground">  
                         <div class="pageInnerContainer">
                             <header class="pageTitle" style="display:block;">
                                 <section class="titleOne">
-                                    <h1><img alt="home page" title="home page" src="images/section_icons/home_icon.png"/></h1>
+                                    <h1><img alt="welcome page" title="welcome page" src="images/section_icons/home_icon.png"/></h1>
                                     <figure class="titleDesign"></figure>
                                 </section>
                                 <section class="titleTwo">
-                                    <h1><span>Home</span></h1>
+                                    <h1><span>Welcome</span></h1>
                                     <figure class="titleDesignTwo"></figure>
                                 </section>
                             </header>
@@ -125,8 +125,9 @@
                                 </figure>
                                 <section class="pageBlurb">
                                     <h2>Welcome to Architect Mindframe Inc.</h2>
-                                    <h3> Defining the blurb title</h3>
-                                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum.</p>
+                                    <h3> A full service web-development firm</h3>
+                                    <p>Originally beginning in 2007 as the small botique company; <strong><em>BC Designs &amp; Promotions</em></strong>, we have matured over the past seven years into a full service <strong>web-development</strong> and <strong>consulting</strong> firm; rechristened as <strong><em>Architect Mindframe</em></strong> in 2014.</p>
+                                    <p>Armed with years of experience, our team of talented developers and associates is able to handle <strong>any project</strong> in a timely and <strong>professional</strong> manner. We thank you for taking the time to learn more about us, and we are excited help <strong>your unqiue vision</strong> become a reality.</p>
                                 </section>
                                 <div class="clear"></div>
                             </div>
@@ -445,7 +446,7 @@
                 <div class="pagesContainer">
                     <!-- Articles -->
                     <div class="page articles">
-                    <section id="articlesBackground">
+                    <!-- <section id="articlesBackground">
                         <header class="pageTitle">
                             <section class="titleOne">
                                 <h1><img alt="articles" title="articles" src="images/section_icons/articles_icon.png"/></h1>
@@ -631,7 +632,7 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
                     </div>
                     <!-- End Articles -->
                 </div>
